# FastSQLModel

./: .gitignore  README.md  cli.html  cli.html.md  database.html  database.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  usage.py  users.py
FastSQLModel/: _modidx.py
fastsqlmodel/: _modidx.py  cli.py  core.py  db.py
fastsqlmodel/templates/: env.py
nbs/: 00_core.ipynb  00_database.ipynb  01_cli.ipynb  index.ipynb  nbdev.yml  sidebar.yml  users.py
nbs/migrations/: env.py
nbs/migrations/versions/: 05f30e5de622_pushing_changes.py  2e3cb66e4479_pushing_changes.py  465b8aeaebdb_pushing_changes.py  4a29c37dba5d_pushing_changes.py  4d9613e97da3_pushing_changes.py  5289002d24df_pushing_changes.py  5a9eb16d5753_pushing_changes.py  a035a7116947_pushing_changes.py  da869a76bbe1_pushing_changes.py  e9f632dc4afc_pushing_changes.py  ec79a7493e5c_pushing_changes.py  ed8ca6eed9fe_pushing_changes.py  fff61b3d7bde_pushing_changes.py
