[project]
name = "fastsqlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Dendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "alembic>=1.14.0",
    "setuptools>=75.6.0",
    "sqlmodel>=0.0.22",
    "typer[all]>=0.15.1",
]

[project.scripts]
fsm = "fastsqlmodel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
