[project]
name = "fastsqlmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nikola Dendic", email = "ndendic@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "alembic>=1.14.0",
    "setuptools>=75.6.0",
    "sqlmodel>=0.0.22",
    "typer[all]>=0.15.1",
]

[project.scripts]
fastmodel = "fastsqlmodel.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter-ai-magics[all]>=2.28.3",
    "jupyter>=1.1.1",
    "nbdev>=2.3.34",
]
